--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
+
 
   <style>
     :root {
@@ -88,7 +90,8 @@
           code: function (code, lang) {
             if (lang === "mermaid") {
               return (
-                '<div class="mermaid" style="background-color:white">' + mermaid.render('mermaid-svg-' + num++, code) + "</div>"
+                '<div class="mermaid" style="background-color:white">' + mermaid.render('mermaid-svg-' + num++,
+                  code) + "</div>"
               );
             }
             return this.origin.code.apply(this, arguments);
@@ -99,13 +102,27 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
+
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+  <script>
+    const gitalk = new Gitalk({
+      clientID: 'a474921fb540a10e97ca',
+      clientSecret: 'e6ee8fb0ef9a36f5588efe54357d2c3e87823603 ',
+      repo: 'quickshortkey',
+      owner: 'ShaunSheep',
+      admin: ['ShaunSheep'],
+      // facebook-like distraction free mode
+      distractionFreeMode: false
+    })
+  </script>
 
-  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
 
 </body>
 
