﻿[提交类型]:token 提交修复评论bug [修改对象]: [影响范围]： [修改描述]: [变化]:

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     const gitalk = new Gitalk({
       clientID: 'a474921fb540a10e97ca',
       clientSecret: 'e6ee8fb0ef9a36f5588efe54357d2c3e87823603 ',
+      accessToken: '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',
       repo: 'quickshortkey',
       owner: 'ShaunSheep',
       admin: ['ShaunSheep'],
