﻿[提交类型]: token修改 [修改对象]: [影响范围]： [修改描述]: [变化]:

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
   <script>
     const gitalk = new Gitalk({
       clientID: 'a474921fb540a10e97ca',
-      clientSecret: 'e6ee8fb0ef9a36f5588efe54357d2c3e87823603 ',
+      clientSecret: '04506b673712e07a0126255fe149a61d0c96905f ',
       accessToken: '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',
       repo: 'quickshortkey',
       owner: 'ShaunSheep',
       admin: ['ShaunSheep'],
       // facebook-like distraction free mode
-      distractionFreeMode: false
+      distractionFreeMode: true
     })
   </script>
 
