--- a/index.html
+++ b/index.html
@@ -115,15 +115,14 @@
     const gitalk = new Gitalk({
       clientID: 'a474921fb540a10e97ca',
       clientSecret: '04506b673712e07a0126255fe149a61d0c96905f ',
-      accessToken: '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',
       repo: 'quickshortkey',
       owner: 'ShaunSheep',
       admin: ['ShaunSheep'],
       // facebook-like distraction free mode
-      distractionFreeMode: true
+      distractionFreeMode: true,
+      id: location.pathname ,
     })
   </script>
-
 
 </body>
 
